# tree-sitter-pdxinfo

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.sh  grammar.js  package-lock.json  package.json  pyproject.toml  redo.sh  setup.py  tree-sitter.json
.zed/: tasks.json
bindings/c/: tree-sitter-pdxinfo.pc.in
bindings/c/tree_sitter/: tree-sitter-pdxinfo.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_pdxinfo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: pdxinfo.txt
