[package]
name = "tree-sitter-pdxinfo"
description = "Playdate pdxinfo game metadata"
version = "1.1.0"
authors = ["Peter Tripp <petertripp@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pdxinfo"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/notpeter/tree-sitter-pdxinfo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
